# lspi-ucos3

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
lib/: CMakeLists.txt  gd32f4xx.sct
lib/inc/: core_cm4.h  core_cm4_simd.h  core_cmFunc.h  core_cmInstr.h  gd32f4xx_adc.h  gd32f4xx_gpio.h  gd32f4xx_rcu.h  gd32f4xx_usart.h
lib/src/: start.c
src/: CMakeLists.txt  gd32f4xx_it.c  gd32f4xx_it.h  main.cpp  systick.c  systick.h
src/bsp/: CMakeLists.txt  bsp_i2c.cpp  bsp_i2c.h  bsp_led.cpp  bsp_led.h  bsp_mpu6050.cpp  bsp_mpu6050.h  bsp_serial.cpp  bsp_serial.h
